# droidgear

./: CHANGELOG.md  README.md  README_EN.md  package-lock.json  package.json
.factory/validation/1/scrutiny/: synthesis.json
.factory/validation/1/scrutiny/reviews/: hermes-gui-scrutiny-fixes.json
.github/workflows/: release.yml
docs/developer/: releases.md
docs/userguide/: config-paths.md
locales/: en.json  zh.json
scripts/: create-portable-update-manifest.d.ts  create-portable-update-manifest.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/droidgear-core/: Cargo.toml
src-tauri/crates/droidgear-core/src/: channel.rs  factory_settings.rs  hermes.rs  lib.rs  openclaw.rs  paths.rs
src-tauri/crates/droidgear-tui/src/: app.rs  tui.rs  ui.rs
src-tauri/src/: bindings.rs  types.rs
src-tauri/src/commands/: codex.rs  hermes.rs  mcp.rs  mod.rs  openclaw.rs  opencode.rs  paths.rs  sessions.rs
src/components/codex/: ConfigStatus.tsx
src/components/droid/: DroidHelpersPage.tsx
src/components/hermes/: ConfigStatus.tsx  HermesConfigPage.tsx  HermesFeatureList.tsx  ImportFromChannelDialog.tsx  index.ts
src/components/layout/: LeftSideBar.tsx  MainWindowContent.tsx
src/components/models/: ModelCard.tsx  ModelConfigPage.tsx
src/components/openclaw/: OpenClawConfigPage.tsx  ProviderDialog.tsx
src/components/opencode/: ConfigStatus.tsx
src/components/preferences/panes/: PathsPane.tsx
src/lib/: bindings.ts  portable-update-manifest.test.ts
src/services/: preferences.ts
src/store/: hermes-store.ts  ui-store.ts
