[package]
name = "droidgear-core"
version = "0.0.0"
edition = "2021"
rust-version = "1.82"

[dependencies]
chrono = "0.4"
dirs = "5"
json_comments = "0.2"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["time"] }
log = "0.4"

[dev-dependencies]
tempfile = "3"
